moved to typescript

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "version": "npm run update-changelog && npm run update-docker-version && rm -fr Dockerfile.bck && git add CHANGELOG.md Dockerfile"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/json-schema": "^7.0.15"
+  }
 }
